syntax = 'proto3';

package scheduler;

// Scheduler service, used to schedule processes/tasks
service Scheduler{
  // Starts a specific module specified by StartModuleRequest. Gets back
  // a StartModuleResponse
  rpc StartModule (StartModuleRequest) returns (StartModuleResponse) {}
}

// Used to start modules, contains the module name
message StartModuleRequest {
  string module_name = 1;
}

// Received when module is started
message StartModuleResponse {
  string response = 1;
}